--- a/client/src/Components/ProjectCard/ProjectCard.css
+++ b/client/src/Components/ProjectCard/ProjectCard.css
@@ -3,7 +3,7 @@
   height: 290px;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px; */
   overflow: hidden;
 }
 
